--- a/studentadminportal-ui/src/app/students/students.component.html
+++ b/studentadminportal-ui/src/app/students/students.component.html
@@ -9,8 +9,8 @@
     <div class="col-xs-12">
       <input type="text" class="search-input" placeholder="Search students"
       [(ngModel)]="filterString"
-        (keyup)="filterStudents()"
-      >
+        (keyup)="filterStudents()">
+      <a routerLink="/students/add" mat-raised-button color="primary" class="m1-1">Add New Student</a>
     </div>
   </div>
   <div class="mt-1 mat-elevation-z8">
